fix: add custom style for scrollbar

--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -1,6 +1,7 @@
 body {
     color: var(--custom-light-blue);
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .theme-background {
